--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "axios": "^1.12.2",
     "flatpickr": "^4.6.13",
     "framer-motion": "^12.23.22",
+    "i18next": "^25.5.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
@@ -31,6 +33,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "react-i18next": "^16.0.0",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0"
   },
